examples/misc/error/compilation/eval_nd-member_mem.bfr
let main = [
  $build {
    a: array(3) {}
  }
  + a:mem
]